# prisma-client-rust

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/binaries/: mod.rs
crates/generator/: Cargo.toml
crates/generator-macros/: Cargo.toml
crates/generator-shared/: Cargo.toml
crates/generator-shared/src/: lib.rs
crates/generator-shared/src/select_include/: selectable_fields.rs
crates/generator/src/: client.rs  lib.rs
crates/generator/src/composite_types/: data.rs  mod.rs  order_by.rs  set_params.rs  where_params.rs
crates/generator/src/models/: actions.rs  create.rs  data.rs  filter.rs  mod.rs  order_by.rs  partial_unchecked.rs  select_include.rs  set_params.rs  types.rs  where_params.rs  with_params.rs
crates/lib/: Cargo.toml
crates/lib/src/: client.rs  lib.rs  migrations.rs  prisma_value.rs  raw.rs
crates/lib/src/queries/: execute_raw.rs  find_many.rs  mongo_raw.rs  query.rs  query_raw.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: args.rs  extensions.rs  lib.rs  runtime.rs
docs/pages/writing-data/: create.mdx
integration-tests/: Cargo.toml
integration-tests/tests/: create_many.rs
prisma-cli/: Cargo.toml
