[workspace]
members = [
  "examples/*",
  "examples/tauri/src-tauri",
  "integration-tests",
  "tests/*/*",
  "crates/*",
  "crates/sdk/example/*",
  "prisma-cli",
]
exclude = ["examples/tauri"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

diagnostics = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
dmmf = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
query-structure = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
psl = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
query-core = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
schema-core = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
request-handlers = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }
user-facing-errors = { git = "https://github.com/AaronDewes/prisma-engines", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

convert_case = "0.6.0"

tauri-specta = { version = "2.0.0-rc.9" }

# This is a deprecated feature so we don't really care about the verison
rspc = "*"

# We don't lock version cause PCR only depends on `derive(Type)` so it should be fine.
specta = "^2.0.0-rc"
