[package]
name = "prisma-client-rust-generator"
version = "0.6.8"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
rust-version = "1.62"

[features]
specta = []
rspc = ["specta"]
migrations = []
# mutation-callbacks = []
mocking = []

mysql = ["prisma-client-rust-sdk/mysql"]
sqlite = ["prisma-client-rust-sdk/sqlite"]
mssql = ["prisma-client-rust-sdk/mssql"]
postgresql = ["prisma-client-rust-sdk/postgresql"]
mongodb = ["prisma-client-rust-sdk/mongodb"]

[dependencies]
serde_json.workspace = true
serde.workspace = true
serde_path_to_error = "0.1.7"
quote = "1.0.18"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0.39"
http = "0.2.6"
directories = "4.0.1"
flate2 = "1.0.23"
reqwest = { version = "0.12.5", features = [
    "blocking",
    "native-tls",
] }
regex = "1.5.5"
thiserror = "1.0.37"

prisma-client-rust-sdk = { path = "../sdk", default_features = false }
prisma-client-rust-generator-shared = { path = "../generator-shared" }
