[package]
name = "prisma-client-rust-sdk"
version = "0.6.8"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
rust-version = "1.62"

[features]
mysql = ["request-handlers/mysql-native"]
sqlite = ["request-handlers/sqlite-native"]
mssql = ["request-handlers/mssql-native"]
postgresql = ["request-handlers/postgresql-native"]
cockroachdb = ["request-handlers/cockroachdb-native"]

mongodb = ["request-handlers/mongodb"]

[dependencies]
serde_json.workspace = true
serde.workspace = true
convert_case = "0.5.0"
serde_path_to_error = "0.1.7"
quote = "1.0.18"
syn = "2"
proc-macro2 = "1.0.39"
thiserror = "1.0.37"

query-structure = { workspace = true }
request-handlers = { workspace = true }
query-core = { workspace = true }
dmmf = { workspace = true }
psl = { workspace = true }
