[package]
name = "prisma-client-rust-sdk"
version = "0.6.8"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
rust-version = "1.62"

[features]
mysql = ["request-handlers/mysql-native", "psl/mysql"]
sqlite = ["request-handlers/sqlite-native", "psl/sqlite"]
mssql = ["request-handlers/mssql-native", "psl/mssql"]
postgresql = ["request-handlers/postgresql-native", "psl/postgresql"]
cockroachdb = ["request-handlers/cockroachdb-native", "psl/cockroachdb"]

mongodb = ["request-handlers/mongodb", "psl/mongodb"]

[dependencies]
serde_json.workspace = true
serde.workspace = true
convert_case = "0.5.0"
serde_path_to_error = "0.1.7"
quote = "1.0.18"
syn = "2"
proc-macro2 = "1.0.39"
thiserror = "1.0.37"

query-structure = { workspace = true }
request-handlers = { workspace = true }
query-core = { workspace = true, features = ["graphql-protocol"] }
dmmf = { workspace = true }
psl = { workspace = true }
